# franken_agent_detection

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  types.rs
src/connectors/: aider.rs  clawdbot.rs  codex.rs  cursor.rs  mod.rs  openclaw.rs  opencode.rs  path_trie.rs  scan.rs  utils.rs  vibe.rs  workspace_cache.rs
