[package]
name = "franken-agent-detection"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Local coding-agent installation detection via filesystem probes"
repository = "https://github.com/Dicklesworthstone/franken_agent_detection"
documentation = "https://docs.rs/franken-agent-detection"
readme = "README.md"
keywords = ["agent", "detection", "filesystem", "codex", "claude"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
